# GStreamer_Hello-World

./: CMakeLists.txt  README.md
apps/: main.cpp
